--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
 solana-client = "3.1.8"
 solana-commitment-config = "3.1.0"
 solana-sdk = "3.0.0"
 solana-system-interface = "3.0.0"
 spl-associated-token-account-interface = "2.0.0"
 spl-token-interface = "2.0.0"
+tokio = "1.49.0"
